--- a/tnks_1.html
+++ b/tnks_1.html
@@ -34,11 +34,7 @@
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171051492-1"></script>
         <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-
-            gtag('config', 'UA-171051492-1');
+           function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-171051492-1");
         </script>
 
 
@@ -75,11 +71,7 @@
         <!-- Global site tag (gtag.js) - Google Ads: 792854533 -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=AW-792854533"></script>
         <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-
-            gtag('config', 'AW-792854533');
+            function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-171051492-1");
         </script>
     </head>
     <body>
