--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta http-equiv="content-security-policy" content="https://amadx.com.br/SECURITY.md">
 
         <!-- Title -->
-        <title>Amadx - Aqui você é mais Beloved</title>
+        <title>Maratona Beloved - Amadx</title>
 
 
         <script>
@@ -104,10 +104,10 @@
         </div>
         
         <div class="container-sm|md|lg|xl text-center container-fluid mx-auto d-block">
-            <h1 id="maratonaBeloved" class="mx-auto d-block">MARATONA BELOVED</h1></div>
+            <h2 id="maratonaBeloved" class="mx-auto d-block">MARATONA BELOVED</h2></div>
         </div>
         <div class="container-sm|md|lg|xl text-center container-fluid mx-auto d-block">
-            <h3 id="tresEmails" class="mx-auto d-block">Três emails gratuitos para otimizar seu tempo e organizar atividades</h1></div>
+            <h3 id="tresEmails" class="mx-auto d-block">Três emails gratuitos para otimizar seu tempo e organizar atividades</h2></div>
         </div>
         <div class="container-sm|md|lg|xl text-center container-fluid row" id="activities">
             <div id="livro" class="container-sm|md|lg|xl col-3 text-center mx-auto d-block">
@@ -134,7 +134,7 @@
 
         <div class="container-sm|md|lg|xl text-center container-fluid mx-auto row" id="controleSeuTempo">
             <div class="container-sm|md|lg|xl col-6 raw">
-                <div class="container-sm|md|lg|xl"><h1 id="controleTempo">CONTROLE SEU TEMPO!</h1></div>
+                <div class="container-sm|md|lg|xl"><h2 id="controleTempo">CONTROLE SEU TEMPO!</h2></div>
                 <!--SUN--><div class="container-sm|md|lg|xl col-9" id="touch"><img src="images/SUN-8.png" class="mx-auto img-fluid col-sm-2 float-left"></div>
                 <div class="container-sm|md|lg|xl col-9" id="tecnicas"><h2 style="padding-left: 2px;">Técnicas leves e produtivas para sua rotina</h2></div>
                 <!--TOUCH--><div class="container-sm|md|lg|xl col-9" id="touch"><img src="images/TOUCH-8.png" class="mx-auto img-fluid col-sm-2 float-left"></div>
