--- a/mobile.html
+++ b/mobile.html
@@ -10,7 +10,7 @@
 		<meta name="author" content="CosmoX">
 		<meta http-equiv="content-security-policy" content="https://amadx.com.br/SECURITY.md">
 		<!-- Title -->
-		<title>Amadx - Aqui você é mais Beloved</title>
+		<title>Maratona Beloved - Amadx</title>
 
 		<!-- Logo -->
 		<link rel="shortcut icon" href="images/apple-icon-72x72.png" >
@@ -105,21 +105,21 @@
 
 		<!--CONTAINER 2-->
 		<div class="container-fluid container-sm|md|lg|xl mx-auto" id="container2">
-			<!--MARATONA BELOVED--><h1 id="maratonaBeloved">Maratona Beloved</h1>
-			<!--TRES EMAILS--><h1 id="tresEmails">Três emails gratuitos para organizar seu tempo e aproveitar atividades</h1>
+			<!--MARATONA BELOVED--><h2 id="maratonaBeloved">Maratona Beloved</h2>
+			<!--TRES EMAILS--><h2 id="tresEmails">Três emails gratuitos para organizar seu tempo e aproveitar atividades</h2>
 			<!--LIVRO IMG--><img id="ativImg" src="images/LIVRO-1-8.png" class="img-fluid mx-auto d-block">
-			<!--LIVRO TEXT--><h1 id="ativText">Ler aquele livro que está parado</h1>
+			<!--LIVRO TEXT--><h2 id="ativText">Ler aquele livro que está parado</h2>
 			<!--EXERCICIO IMG--><img id="ativImg" src="images/EXERCICIO-1-8.png" class="img-fluid mx-auto d-block">
-			<!--EXERCICIO TEXT--><h1 id="ativText">Praticar exercícios físicos</h1>
+			<!--EXERCICIO TEXT--><h2 id="ativText">Praticar exercícios físicos</h2>
 			<!--PAO IMG--><img id="ativImg" src="images/PAO-1-8.png" class="img-fluid mx-auto d-block">
-			<!--PAO TEXT--><h1 id="ativText">Fazer pão</h1>
+			<!--PAO TEXT--><h2 id="ativText">Fazer pão</h2>
 			<!--AMIGOS IMG--><img id="ativImg" src="images/AMIGOS-1-8.png" class="img-fluid mx-auto d-block">
-			<!--AMIGOS TEXT--><h1 id="ativText">Aproveitar o tempo com amigos e família</h1>
+			<!--AMIGOS TEXT--><h2 id="ativText">Aproveitar o tempo com amigos e família</h2>
 		</div>
 
 		<!--CONTAINER 3-->
 		<div class="container-fluid container-sm|md|lg|xl mx-auto" id="container3">
-			<!--CONTROLE SEU TEMPO--><h1 id="controleTempo">Controle seu tempo</h1>
+			<!--CONTROLE SEU TEMPO--><h2 id="controleTempo">Controle seu tempo</h2>
 			<!--SUN--><img src="images/SUN-8.png" id="dicasImg" class="img-fluid mx-auto d-block">
 			<!--TECNICAS--><h2 id="dicas">Técnicas leves e produtivas para sua rotina!</h2>
 			<!--POINTER--><img src="images/TOUCH-8.png" id="dicasImg" class="img-fluid mx-auto d-block">
@@ -135,7 +135,7 @@
 
 		<!--CONTAINER 5-->
 		<div class="container-fluid container-sm|md|lg|xl mx-auto" id="container5">
-			<!--RECEBA--><h1 id="receba">Receba o conteúdo gratuitamente</h1>
+			<!--RECEBA--><h2 id="receba">Receba o conteúdo gratuitamente</h2>
 			<!--FORMULARIO-->
 			<form method="POST" action="https://smtl.gama.academy/leads/bfeebc01-b7e1-11ea-8228-89cff86db9a0" class="needs-validation mx-auto d-block" id="myForm" novalidate>
 
