--- a/tnks_1.html
+++ b/tnks_1.html
@@ -11,7 +11,7 @@
         <meta http-equiv="content-security-policy" content="https://amadx.com.br/SECURITY.md">
 
         <!-- Title -->
-        <title>Amadx - Aqui você é mais Beloved</title>
+        <title>Maratona Beloved - Amadx</title>
         
         <!-- Logo -->
         <link rel="shortcut icon" href="images/ms-icon-310x310.png" >
