--- a/mobile.html
+++ b/mobile.html
@@ -21,22 +21,22 @@
 		<!--PRELOADS-->
 		<link rel="preload" href="css/mobile.css" as="style">
 		<link rel="preload" href="js/script.js" as="script">
-		<link rel="preload" href="css/bootstrap.min.css" as="style">
-		<link rel="preload" href="js/bootstrap.min.js" as="script">
 
 		<!-- Logo - Favicon -->
 		<link rel="shortcut icon" href="images/ms-icon-310x310.png" >
 
 		<!-- CSS -->
 		<link rel="stylesheet" href="css/mobile.css">
-		<link rel="stylesheet" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600;700&family=Roboto&display=swap');
 		</style>
 
 		<!-- Scripts -->
 		<script src="js/script.js" type="text/javascript"></script>
-		<script src="js/bootstrap.min.js" type="text/javascript"></script>
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 		
 		
 		<!--TRACKING CODES-->
