--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="container-sm|md|lg|xl"><h2 id="chamadaDesktop2" class="col-10">Organize sua rotina e melhore a qualidade de vida!</h2></div>
             </div>
             <div id="relogio" class="container-sm|md|lg|xl mx-auto col-6">
-                <!--RELOGIO--><img src="images/relogio-min.png" id="clock" class="img-fluid mx-auto d-block bottom">
+                <!--RELOGIO--><img src="images/relogio.png" id="clock" class="img-fluid mx-auto d-block bottom">
             </div>
         </div>
         
