--- a/mobile.html
+++ b/mobile.html
@@ -24,7 +24,7 @@
 		<link rel="preload" href="js/popper.min.js" as="script">
 
         <!-- CSS -->
-        <link rel="stylesheet" href="css/desktop.css">
+        <link rel="stylesheet" href="css/mobile.css">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600;700&family=Roboto&display=swap');
