correção thank you page mobile

--- a/tnks_1.html
+++ b/tnks_1.html
@@ -95,11 +95,11 @@
         </div>
             
         <!-- BACKGROUND-->
-        <div id="intro" class="container-fluid container-sm|md|lg|xl mx-auto text-center">
+        <div id="intro" class="container-fluid container-sm|md|lg|xl mx-auto d-block text-center">
             <h1 id="fra1" class="mx-auto d-block">Desejamos Boas - Vindas!</h1>
             <h5 id="fra2" class="mx-auto d-block">O primeiro passo de grandes mudanças foi realizado.</h6>
             <h5 id="fra" class="mx-auto d-block">Na sexta-feira, você receberá o primeiro e-mail da maratona.</h6>
-            <h5 id="fra3" class="">Compartilhe essa ideia.</h6>
+            <h5 id="fra3" class="mx-auto d-block">Compartilhe essa ideia.</h6>
             <!--BOTAO--><a href="https://amadx.com.br" class="btn btn-secondary btn-lg active "role="button" aria-pressed="true" style="background: #ffffff; color: #6316a3;">Acessar página inicial </a>
         </div>
     </body>
