otimização de imagem do relógio

--- a/mobile.html
+++ b/mobile.html
@@ -95,7 +95,7 @@
 		</div>
 
 		<div class="container-fluid container-sm|md|lg|xl mx-auto" id="containerRelogio">
-			<!--RELOGIO--><img id="relogio" src="images/relogio.png" class="img-fluid mx-auto">
+			<!--RELOGIO--><img id="relogio" src="images/relogio_optimized.png" class="img-fluid mx-auto">
 		</div>
 
 
