--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <link rel="preload" href="js/jquery-3.5.1.min.js" as="script">
         <link rel="preload" href="js/bootstrap.min.js" as="script">
 		<link rel="preload" href="js/popper.min.js" as="script">
-		<link rel="preload" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600;700&family=Roboto&display=swap" as="style">
+		<link rel="preload" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@600;700&family=Roboto&display=swap" as="url">
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/desktop.css">
