alts adicionadas às imagens

--- a/tnks_1.html
+++ b/tnks_1.html
@@ -60,7 +60,7 @@
             fbq('init', '814492759088576');
             fbq('track', 'PageView');
         </script>
-        <noscript><img height="1" width="1" style="display:none"
+        <noscript><img alt="facebook icon" height="1" width="1" style="display:none"
             src="https://www.facebook.com/tr?id=814492759088576&ev=PageView&noscript=1"
         /></noscript>
 
@@ -88,11 +88,11 @@
   
         <!--CABEÇALHO-->
         <div class="container-fluid container-sm|md|lg|xl mx-auto" id="cabecalho">
-            <!--LOGO--><span><img id="logodesk" src="images/amadx_logo_mob-8.png" class="mx-auto img-fluid w-50 float-left"></span>
+            <!--LOGO--><span><img alt="logo do site" id="logodesk" src="images/amadx_logo_mob-8.png" class="mx-auto img-fluid w-50 float-left"></span>
             
             <!--SOCIAL MEDIA-->
-            <!--FACEBOOK--> <span><a href="https://www.facebook.com/Amadx-110455760724284"><img id="social" src="images/FACE-8.png" class="img-fluid mx-auto"></a></span>
-            <!--INSTAGRAM--> <span><a href="http://instagram.com/amadx_br"><img id="social" src="images/INSTA-8.png" class="img-fluid mx-auto"></a></span>	
+            <!--FACEBOOK--> <span><a href="https://www.facebook.com/Amadx-110455760724284"><img alt="facebook icon" id="social" src="images/FACE-8.png" class="img-fluid mx-auto"></a></span>
+            <!--INSTAGRAM--> <span><a href="http://instagram.com/amadx_br"><img id="social" alt="instagram icon" src="images/INSTA-8.png" class="img-fluid mx-auto"></a></span>	
         </div>
             
         <!-- BACKGROUND-->
