--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 fbq('init', '814492759088576');
                 fbq('track', 'PageView');
         </script>
-        <noscript><img height="1" width="1" style="display:none"
+        <noscript><img  alt="facebook icon" height="1" width="1" style="display:none"
             src="https://www.facebook.com/tr?id=814492759088576&ev=PageView&noscript=1"
             /></noscript>
             <!-- End Facebook Pixel Code -->
@@ -90,10 +90,10 @@
         <!--CABEÇALHO-->
         <div class="container-fluid container-sm|md|lg|xl mx-auto" id="cabecalho">
             <!--LOGO-->
-            <span><img id="logodesk" src="images/amadx_logo_mob-8.png" class="mx-auto img-fluid w-50 float-left"></span>
+            <span><img alt="logomarca do site" id="logodesk" src="images/amadx_logo_mob-8.png" class="mx-auto img-fluid w-50 float-left"></span>
             <!--SOCIAL MEDIA-->
-            <!--FACEBOOK--> <span><a href="https://www.facebook.com/Amadx-110455760724284"><img id="social" src="images/FACE-8.png" class="img-fluid mx-auto"></a></span>
-            <!--INSTAGRAM--> <span><a href="http://instagram.com/amadx_br"><img id="social" src="images/INSTA-8.png" class="img-fluid mx-auto"></a></span>	
+            <!--FACEBOOK--> <span><a href="https://www.facebook.com/Amadx-110455760724284"><img alt="facebook icon" id="social" src="images/FACE-8.png" class="img-fluid mx-auto"></a></span>
+            <!--INSTAGRAM--> <span><a href="http://instagram.com/amadx_br"><img alt="instagram icon" id="social" src="images/INSTA-8.png" class="img-fluid mx-auto"></a></span>	
         </div>
 
         <div class="container-sm|md|lg|xl row mx-auto" id="banner1">
@@ -102,7 +102,7 @@
                 <div class="container-sm|md|lg|xl"><h2 id="chamadaDesktop2" class="col-10">Organize sua rotina e melhore a qualidade de vida!</h2></div>
             </div>
             <div id="relogio" class="container-sm|md|lg|xl mx-auto col-6">
-                <!--RELOGIO--><img src="images/relogio_optimized.png" id="clock" class="img-fluid mx-auto d-block bottom">
+                <!--RELOGIO--><img src="images/relogio_optimized.png" alt="braço de homem com um relógio" id="clock" class="img-fluid mx-auto d-block bottom">
             </div>
         </div>
         
@@ -114,19 +114,19 @@
         </div>
         <div class="container-sm|md|lg|xl text-center container-fluid row" id="activities">
             <div id="livro" class="container-sm|md|lg|xl col-3 text-center mx-auto d-block">
-                <!--LIVRO--><img src="images/LIVRO-1-8.png" class="mx-auto d-block img-fluid"> 
+                <!--LIVRO--><img src="images/LIVRO-1-8.png" alt="livro" class="mx-auto d-block img-fluid"> 
                 <h3 class="mx-auto d-block text-center" id="atividades">Ler aquele livro que está parado.</h3>
             </div>
             <div id="exercicios" class="container-sm|md|lg|xl text-center col-3">
-                <!--EXERCICIO--><img src="images/EXERCICIO-1-8.png" class="mx-auto d-block img-fluid"> <!--EXERCÍCIO-->
+                <!--EXERCICIO--><img alt="pessoa realizando exercicios" src="images/EXERCICIO-1-8.png" class="mx-auto d-block img-fluid"> <!--EXERCÍCIO-->
                 <h3 class="mx-auto d-block text-center" id="atividades">Comece a exercitar-se.</h3>
             </div>
             <div id="pao" class="container-sm|md|lg|xl text-center col-3">
-                <!--PAO--><img src="images/PAO-1-8.png" class="mx-auto d-block img-fluid"> <!--PÃO-->
+                <!--PAO--><img  alt="pão"src="images/PAO-1-8.png" class="mx-auto d-block img-fluid"> <!--PÃO-->
                 <h3 class="mx-auto d-block text-center" id="atividades">Aprender a fazer pão.</h3>
             </div>
             <div id="amigos" class="container-sm|md|lg|xl text-center col-3">
-                <!--AMIGOS--><img src="images/AMIGOS-1-8.png" class="mx-auto d-block img-fluid"> <!--AMIGOS-->
+                <!--AMIGOS--><img alt="grupo de amigos abraçados" src="images/AMIGOS-1-8.png" class="mx-auto d-block img-fluid"> <!--AMIGOS-->
                 <h3 class="mx-auto d-block text-center" id="atividades">Mais tempo com sua família e amigos.</h3>
             </div>
         </div>
@@ -138,11 +138,11 @@
         <div class="container-sm|md|lg|xl text-center container-fluid mx-auto row" id="controleSeuTempo">
             <div class="container-sm|md|lg|xl col-6 raw">
                 <div class="container-sm|md|lg|xl"><h2 id="controleTempo">CONTROLE SEU TEMPO!</h2></div>
-                <!--SUN--><div class="container-sm|md|lg|xl col-9" id="touch"><img src="images/SUN-8.png" class="mx-auto img-fluid col-sm-2 float-left"></div>
+                <!--SUN--><div class="container-sm|md|lg|xl col-9" id="touch"><img alt="sol" src="images/SUN-8.png" class="mx-auto img-fluid col-sm-2 float-left"></div>
                 <div class="container-sm|md|lg|xl col-9" id="tecnicas"><h2 style="padding-left: 2px;">Técnicas leves e produtivas para sua rotina</h2></div>
-                <!--TOUCH--><div class="container-sm|md|lg|xl col-9" id="touch"><img src="images/TOUCH-8.png" class="mx-auto img-fluid col-sm-2 float-left"></div>
+                <!--TOUCH--><div class="container-sm|md|lg|xl col-9" id="touch"><img alt="imagem representando toque na tela" src="images/TOUCH-8.png" class="mx-auto img-fluid col-sm-2 float-left"></div>
                 <div class="container-sm|md|lg|xl col-9" id="tecnicas"><h2>Dicas de apps para você fazer o que mais gosta</h2></div>
-                <!--PRANCHETA--><div class="container-sm|md|lg|xl col-9" id="touch"><img src="images/PRANCHETA-8.png" class="mx-auto img-fluid col-sm-2 float-left"></div>
+                <!--PRANCHETA--><div class="container-sm|md|lg|xl col-9" id="touch"><img alt="prancheta" src="images/PRANCHETA-8.png" class="mx-auto img-fluid col-sm-2 float-left"></div>
                 <div class="container-sm|md|lg|xl col-9" id="tecnicas"><h2>Faça como grandes empresas e priorize</h2></div>
             </div>
         
