--- a/mobile.html
+++ b/mobile.html
@@ -57,7 +57,7 @@
 				fbq('init', '814492759088576');
 				fbq('track', 'PageView');
 		</script>
-		<noscript><img height="1" width="1" style="display:none"
+		<noscript><img alt="facebook icon" height="1" width="1" style="display:none"
 			src="https://www.facebook.com/tr?id=814492759088576&ev=PageView&noscript=1"
 		/></noscript>
 		<!-- End Facebook Pixel Code -->
@@ -86,7 +86,7 @@
 
 		<!--CABEÇALHO-->
 		<div class="container-fluid container-sm|md|lg|xl mx-auto" id="cabecalho">
-			<!--LOGO--><img id="logodesk" src="images/amadx_logo_mob-8.png" class="mx-auto d-block img-fluid w-25 h-25"> 
+			<!--LOGO--><img alt="logo do site" id="logodesk" src="images/amadx_logo_mob-8.png" class="mx-auto d-block img-fluid w-25 h-25"> 
 		</div>
 
 		<!--CONTAINER 1-->
@@ -96,7 +96,7 @@
 		</div>
 
 		<div class="container-fluid container-sm|md|lg|xl mx-auto" id="containerRelogio">
-			<!--RELOGIO--><img id="relogio" src="images/relogio_optimized.png" class="img-fluid mx-auto">
+			<!--RELOGIO--><img alt="braço masculino com um relógio" id="relogio" src="images/relogio_optimized.png" class="img-fluid mx-auto">
 		</div>
 
 
@@ -104,24 +104,24 @@
 		<div class="container-fluid container-sm|md|lg|xl mx-auto" id="container2">
 			<!--MARATONA BELOVED--><h2 id="maratonaBeloved">Maratona Beloved</h2>
 			<!--TRES EMAILS--><h2 id="tresEmails">Três emails gratuitos para organizar seu tempo e aproveitar atividades</h2>
-			<!--LIVRO IMG--><img id="ativImg" src="images/LIVRO-1-8.png" class="img-fluid mx-auto d-block">
+			<!--LIVRO IMG--><img id="ativImg" src="images/LIVRO-1-8.png" alt="livro" class="img-fluid mx-auto d-block">
 			<!--LIVRO TEXT--><h2 id="ativText">Ler aquele livro que está parado</h2>
-			<!--EXERCICIO IMG--><img id="ativImg" src="images/EXERCICIO-1-8.png" class="img-fluid mx-auto d-block">
+			<!--EXERCICIO IMG--><img alt="pessoa praticando exercícios" id="ativImg" src="images/EXERCICIO-1-8.png" class="img-fluid mx-auto d-block">
 			<!--EXERCICIO TEXT--><h2 id="ativText">Praticar exercícios físicos</h2>
-			<!--PAO IMG--><img id="ativImg" src="images/PAO-1-8.png" class="img-fluid mx-auto d-block">
+			<!--PAO IMG--><img id="ativImg" alt="pão" src="images/PAO-1-8.png" class="img-fluid mx-auto d-block">
 			<!--PAO TEXT--><h2 id="ativText">Fazer pão</h2>
-			<!--AMIGOS IMG--><img id="ativImg" src="images/AMIGOS-1-8.png" class="img-fluid mx-auto d-block">
+			<!--AMIGOS IMG--><img id="ativImg" alt="amigos se abraçando" src="images/AMIGOS-1-8.png" class="img-fluid mx-auto d-block">
 			<!--AMIGOS TEXT--><h2 id="ativText">Aproveitar o tempo com amigos e família</h2>
 		</div>
 
 		<!--CONTAINER 3-->
 		<div class="container-fluid container-sm|md|lg|xl mx-auto" id="container3">
 			<!--CONTROLE SEU TEMPO--><h2 id="controleTempo">Controle seu tempo</h2>
-			<!--SUN--><img src="images/SUN-8.png" id="dicasImg" class="img-fluid mx-auto d-block">
+			<!--SUN--><img alt="sol" src="images/SUN-8.png" id="dicasImg" class="img-fluid mx-auto d-block">
 			<!--TECNICAS--><h2 id="dicas">Técnicas leves e produtivas para sua rotina!</h2>
-			<!--POINTER--><img src="images/TOUCH-8.png" id="dicasImg" class="img-fluid mx-auto d-block">
+			<!--POINTER--><img alt="dedo tocando na tela" src="images/TOUCH-8.png" id="dicasImg" class="img-fluid mx-auto d-block">
 			<!--DICAS--><h2 id="dicas">Dicas de apps para você fazer o que mais gosta!</h2>
-			<!--PRANCHETA--><img src="images/PRANCHETA-8.png" id="dicasImg" class="img-fluid mx-auto d-block">
+			<!--PRANCHETA--><img alt="prancheta" src="images/PRANCHETA-8.png" id="dicasImg" class="img-fluid mx-auto d-block">
 			<!--EMPRESAS--><h2 id="dicas">Faça como grande empresas e priorize</h2>
 		</div>
 
@@ -154,8 +154,8 @@
 				<br><br>
 			</form>
 			<!--SOCIAL MEDIA-->
-			<!--FACEBOOK--> <span><a href="https://www.facebook.com/Amadx-110455760724284"><img id="social" src="images/FACE-8.png" class="img-fluid mx-auto"></a></span>
-			<!--INSTAGRAM--> <span><a href="http://instagram.com/amadx_br"><img id="social" src="images/INSTA-8.png" class="img-fluid mx-auto"></a></span>
+			<!--FACEBOOK--> <span><a href="https://www.facebook.com/Amadx-110455760724284"><img alt="facebook icon" id="social" src="images/FACE-8.png" class="img-fluid mx-auto"></a></span>
+			<!--INSTAGRAM--> <span><a href="http://instagram.com/amadx_br"><img alt="instagram icon" id="social" src="images/INSTA-8.png" class="img-fluid mx-auto"></a></span>
 		</div>
 
 
