--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="container-sm|md|lg|xl col-6" id="containerForm">
                 <div id="cadastro" class="container p-3 my-3" style="border-radius: 10px; width: 360px; box-shadow: 5px 5px grey;"><br>
                     <h2 style="font-family:'Quicksand', 'sans-serif'; font-weight: bold; color: #761498;">Receba o conteúdo gratuitamente</h2><br>
-                    <form netlify class="needs-validation" id="myForm" novalidate>
+                    <form netlify class="needs-validation" id="myForm" action="/#myModal" novalidate>
 
                         <div class="form-group has-error">
                             <input name="name" type="text" class="col-sm-10 mx-auto d-block form-control" pattern="^\D{2,}\s[\D\s]{2,}$" title="Digite seu nome completo" placeholder="Preencha seu nome aqui ;)" style="font-family: 'Roboto', sans-serif; border-radius: 5px; border-color: #761498;" required/>
